{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 146,
  "lineage": "f9354591-7e57-9a0c-c5ef-102a25dc727d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_elb",
      "name": "nginx_exporter_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:350931055052:loadbalancer/aa47ed92f4b1c42239c83bde7f124bb4",
            "availability_zones": [
              "ap-south-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "desync_mitigation_mode": "defensive",
            "dns_name": "aa47ed92f4b1c42239c83bde7f124bb4-2076452184.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "TCP:31447",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "aa47ed92f4b1c42239c83bde7f124bb4",
            "idle_timeout": 60,
            "instances": [
              "i-08422641afbc3c8e9"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 31447,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:ap-south-1:350931055052:certificate/2c32e435-376d-4d7d-8291-129debb53b00"
              }
            ],
            "name": "aa47ed92f4b1c42239c83bde7f124bb4",
            "security_groups": [
              "sg-07a28651de9f3c7d0"
            ],
            "source_security_group": "350931055052/k8s-elb-aa47ed92f4b1c42239c83bde7f124bb4",
            "source_security_group_id": "sg-07a28651de9f3c7d0",
            "subnets": [
              "subnet-08df1217dbfc1c55b"
            ],
            "tags": {
              "kubernetes.io/cluster/ne_eks": "owned",
              "kubernetes.io/service-name": "default/nginx"
            },
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_elb",
      "name": "node_exporter_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:350931055052:loadbalancer/a879272c5f7ff4c03aec86f20b911ffc",
            "availability_zones": [
              "ap-south-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "desync_mitigation_mode": "defensive",
            "dns_name": "a879272c5f7ff4c03aec86f20b911ffc-420734860.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "TCP:30676",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "a879272c5f7ff4c03aec86f20b911ffc",
            "idle_timeout": 60,
            "instances": [
              "i-08422641afbc3c8e9"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 30676,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:ap-south-1:350931055052:certificate/b2f02ab1-2f01-48d6-8b8a-75c28ec1e27a"
              }
            ],
            "name": "a879272c5f7ff4c03aec86f20b911ffc",
            "security_groups": [
              "sg-005b4aa5de48b57f0"
            ],
            "source_security_group": "350931055052/k8s-elb-a879272c5f7ff4c03aec86f20b911ffc",
            "source_security_group_id": "sg-005b4aa5de48b57f0",
            "subnets": [
              "subnet-08df1217dbfc1c55b"
            ],
            "tags": {
              "kubernetes.io/cluster/ne_eks": "owned",
              "kubernetes.io/service-name": "default/node-exporter"
            },
            "zone_id": "ZP97RAFLXTNZK"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d4e8271d946b6e7",
            "arn": "arn:aws:ec2:ap-south-1:350931055052:elastic-ip/eipalloc-06d4e8271d946b6e7",
            "association_id": "eipassoc-0ab807b9a24c195d7",
            "domain": "vpc",
            "id": "eipalloc-06d4e8271d946b6e7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0eff7bd59100e5680",
            "private_dns": "ip-11-0-3-163.ap-south-1.compute.internal",
            "private_ip": "11.0.3.163",
            "public_dns": "ec2-13-202-39-219.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.39.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:350931055052:instance/i-048080ada14e96a77",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048080ada14e96a77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "node_exporter",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0351cd1c31b441be2",
            "private_dns": "ip-11-0-3-106.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.3.106",
            "public_ip": "13.201.178.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08917c3e89b9ee3a1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08df1217dbfc1c55b",
            "tags": {
              "Name": "bastion-ne"
            },
            "tags_all": {
              "Name": "bastion-ne"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03d01ff466cfce45a"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ne_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:internet-gateway/igw-04c47ee51415c9bcd",
            "id": "igw-04c47ee51415c9bcd",
            "owner_id": "350931055052",
            "vpc_id": "vpc-07e68e9b02703a1b0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d4e8271d946b6e7",
            "association_id": "eipassoc-0ab807b9a24c195d7",
            "connectivity_type": "public",
            "id": "nat-0031871d95836e99d",
            "network_interface_id": "eni-0eff7bd59100e5680",
            "private_ip": "11.0.3.163",
            "public_ip": "13.202.39.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08df1217dbfc1c55b"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ne_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c47ee51415c9bcd",
            "id": "r-rtb-05268ad44efbd537a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05268ad44efbd537a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ne_internet_gateway",
            "aws_route_table.ne_internet_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb5f93ad316aa7441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0031871d95836e99d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb5f93ad316aa744",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.example",
            "aws_route_table.private",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ne_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:route-table/rtb-05268ad44efbd537a",
            "id": "rtb-05268ad44efbd537a",
            "owner_id": "350931055052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c47ee51415c9bcd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e68e9b02703a1b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:route-table/rtb-0eb5f93ad316aa744",
            "id": "rtb-0eb5f93ad316aa744",
            "owner_id": "350931055052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0031871d95836e99d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e68e9b02703a1b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ne_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05619de8576a2d465",
            "route_table_id": "rtb-05268ad44efbd537a",
            "subnet_id": "subnet-08df1217dbfc1c55b"
          },
          "dependencies": [
            "aws_route_table.ne_internet_gateway",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ne_private_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c0eded1452026cf",
            "route_table_id": "rtb-0eb5f93ad316aa744",
            "subnet_id": "subnet-06fffaf23c71a31cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ne_private_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca3f36f04acadc3e",
            "route_table_id": "rtb-0eb5f93ad316aa744",
            "subnet_id": "subnet-02d97f2ad7ae0e251"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:security-group/sg-03d01ff466cfce45a",
            "description": "Security group for Kubernetes cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d01ff466cfce45a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "kubernetes",
            "name_prefix": "",
            "owner_id": "350931055052",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e68e9b02703a1b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:subnet/subnet-06fffaf23c71a31cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fffaf23c71a31cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350931055052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ne_vpc_private_subnet_a"
            },
            "tags_all": {
              "Name": "ne_vpc_private_subnet_a"
            },
            "vpc_id": "vpc-07e68e9b02703a1b0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:subnet/subnet-02d97f2ad7ae0e251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d97f2ad7ae0e251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350931055052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ne_vpc_private_subnet_b"
            },
            "tags_all": {
              "Name": "ne_vpc_private_subnet_b"
            },
            "vpc_id": "vpc-07e68e9b02703a1b0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:subnet/subnet-08df1217dbfc1c55b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08df1217dbfc1c55b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "350931055052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ne_vpc_public_subnet_a"
            },
            "tags_all": {
              "Name": "ne_vpc_public_subnet_a"
            },
            "vpc_id": "vpc-07e68e9b02703a1b0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:350931055052:vpc/vpc-07e68e9b02703a1b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0d73ea21a9721994a",
            "default_route_table_id": "rtb-021414fcc1436ecf4",
            "default_security_group_id": "sg-09e2347e8758d3cf6",
            "dhcp_options_id": "dopt-0e60a96e4ca8b8a53",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e68e9b02703a1b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021414fcc1436ecf4",
            "owner_id": "350931055052",
            "tags": {
              "Name": "ne_vpc"
            },
            "tags_all": {
              "Name": "ne_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/nginx",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-backend-protocol": "http",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:ap-south-1:350931055052:certificate/2c32e435-376d-4d7d-8291-129debb53b00"
                },
                "generation": 0,
                "name": "nginx",
                "namespace": "default",
                "resource_version": "29209",
                "uid": "a47ed92f-4b1c-4223-9c83-bde7f124bb4f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.102.122",
                "cluster_ips": [
                  "10.100.102.122"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31447,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "aa47ed92f4b1c42239c83bde7f124bb4-2076452184.ap-south-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_acm_certificate.nginx-cert",
            "aws_eks_cluster.my_cluster",
            "aws_iam_role.eks_cluster_role",
            "aws_subnet.private_subnet1",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_eks_cluster_auth.my_cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "node-exporter-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/node-exporter",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-backend-protocol": "http",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:ap-south-1:350931055052:certificate/b2f02ab1-2f01-48d6-8b8a-75c28ec1e27a"
                },
                "generation": 0,
                "name": "node-exporter",
                "namespace": "default",
                "resource_version": "29720",
                "uid": "879272c5-f7ff-4c03-aec8-6f20b911ffcb"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.59.94",
                "cluster_ips": [
                  "10.100.59.94"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30676,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "9100"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "node-exporter"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a879272c5f7ff4c03aec86f20b911ffc-420734860.ap-south-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_eks_cluster.my_cluster",
            "aws_eks_node_group.my_node_group",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role.eks_node_role",
            "aws_route53_record.cert_validation",
            "aws_security_group.kubernetes",
            "aws_subnet.private_subnet1",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_eks_cluster_auth.my_cluster"
          ]
        }
      ]
    }
  ]
}